adds QR code link to presentation

--- a/src/templates/_start.hbs
+++ b/src/templates/_start.hbs
@@ -2,6 +2,7 @@
 <section class="section-title" data-background="{{ theme.mainColor }}" data-transition="{{ theme.specialTransition }}">
 	<h2>{{ title }}</h2>
 	<h3>{{ subtitle }}</h3>
+	<a href="https://rawgit.com/uniqname/componentized-architecture-presentation/master/dist/index.html#/"><img src="http://qrfree.kaywa.com/?l=1&s=8&d=https%3A%2F%2Frawgit.com%2Funiqname%2Fcomponentized-architecture-presentation%2Fmaster%2Fdist%2Findex.html%23%2F" alt="QRCode"/></a>
 </section>
 
 {{!-- About the author --}}
